# PIMDAL

./: README.md
pimdal/: CMakeLists.txt  build.sh
pimdal/.devcontainer/: Dockerfile  devcontainer.json
pimdal/aggregate/: aggregate.c  aggregate.h  aggregate_hash.c
pimdal/general/: arithmetic.c  arithmetic.h  reduce.c  reduce.h
pimdal/hash/: cuckoo_hash.c  hash_aggr.h  hash_func.h  hash_steps.c  linear_hash.c  quadratic_hash.c
pimdal/join/: hash_join.c  hash_join.h  sort_merge.c  sort_merge.h
pimdal/main/: CMakeLists.txt
pimdal/main/aggregate/hash/: CMakeLists.txt
pimdal/main/aggregate/hash/dpu/: CMakeLists.txt  kernel_aggregate.c
pimdal/main/aggregate/hash/host/: CMakeLists.txt  host_aggregate.cpp  host_aggregate_sync.cpp  shared.cpp
pimdal/main/aggregate/hash/shared/: datatype.h
pimdal/main/aggregate/sort/: CMakeLists.txt
pimdal/main/aggregate/sort/dpu/: CMakeLists.txt  kernel_aggregate.c
pimdal/main/aggregate/sort/host/: CMakeLists.txt  host_aggregate.cpp  host_aggregate_sync.cpp  shared.cpp
pimdal/main/aggregate/sort/shared/: groupby.h
pimdal/main/join/broadcast/: CMakeLists.txt
pimdal/main/join/broadcast/dpu/: CMakeLists.txt  kernel_join.c  kernel_join_hash.c
pimdal/main/join/broadcast/host/: CMakeLists.txt  host_join.cpp  host_join_sync.cpp  shared.cpp
pimdal/main/join/broadcast/shared/: datatype.h  join_hash.h
pimdal/main/join/hash/: CMakeLists.txt
pimdal/main/join/hash/dpu/: CMakeLists.txt  kernel_join.c
pimdal/main/join/hash/host/: CMakeLists.txt  host_join.cpp  host_join_sync.cpp  shared.cpp
pimdal/main/join/sort/: CMakeLists.txt
pimdal/main/join/sort/dpu/: CMakeLists.txt  kernel_join.c
pimdal/main/join/sort/host/: CMakeLists.txt  host_join.cpp  host_join_sync.cpp  shared.cpp
pimdal/main/join/sort/shared/: datatype.h  join.h
pimdal/main/select/: CMakeLists.txt
pimdal/main/select/dpu/: CMakeLists.txt  kernel_select.c
pimdal/main/select/host/: CMakeLists.txt  host_select.cpp  host_select_sync.cpp  shared.cpp
pimdal/main/select/shared/: datatype.h  select.h
pimdal/main/sort/: CMakeLists.txt
pimdal/main/sort/dpu/: CMakeLists.txt  kernel_sort.c
pimdal/main/sort/host/: CMakeLists.txt  host_sort.cpp  host_sort_sync.cpp  shared.cpp
pimdal/main/sort/shared/: args.h
pimdal/main/tpc_h/query1/: CMakeLists.txt
pimdal/main/tpc_h/query1/dpu/: CMakeLists.txt  kernel_q1_1.c  kernel_q1_2.c
pimdal/main/tpc_h/query1/host/: CMakeLists.txt  host_q1.cpp
pimdal/main/tpc_h/query1/shared/: datatype.h  hash_aggr.h  param.h
pimdal/main/tpc_h/query3/: CMakeLists.txt
pimdal/main/tpc_h/query3/dpu/: CMakeLists.txt  kernel_q3_1.c  kernel_q3_2.c  kernel_q3_3.c  kernel_q3_4.c  kernel_q3_5.c
pimdal/main/tpc_h/query3/host/: CMakeLists.txt  host_q3.cpp
pimdal/main/tpc_h/query3/shared/: datatype.h  hash_aggr.h  param.h
pimdal/main/tpc_h/query4/: CMakeLists.txt
pimdal/main/tpc_h/query4/dpu/: CMakeLists.txt  kernel_q4_1.c  kernel_q4_2.c  kernel_q4_3.c  kernel_q4_4.c
pimdal/main/tpc_h/query4/host/: CMakeLists.txt  host_q4.cpp
pimdal/main/tpc_h/query4/shared/: datatype.h  hash_aggr.h  param.h
pimdal/main/tpc_h/query5/: CMakeLists.txt
pimdal/main/tpc_h/query5/dpu/: CMakeLists.txt  kernel_q5_1.c  kernel_q5_2.c  kernel_q5_3.c  kernel_q5_4.c  kernel_q5_5.c  kernel_q5_6.c  kernel_q5_7.c
pimdal/main/tpc_h/query5/host/: CMakeLists.txt  host_q5.cpp
pimdal/main/tpc_h/query5/shared/: datatype.h  hash_aggr.h  hash_func.h  param.h
pimdal/main/tpc_h/query6/: CMakeLists.txt
pimdal/main/tpc_h/query6/dpu/: CMakeLists.txt  kernel_q6.c
pimdal/main/tpc_h/query6/host/: CMakeLists.txt  host_q6.cpp
pimdal/main/tpc_h/query6/shared/: datatype.h  param.h
pimdal/main/tpc_h/reader/: read_table.cpp
pimdal/select/: sel.c  sel.h
pimdal/sort/: sort.c  sort.h  sort_func.c  sort_keyval.c  sort_keyval_func.c
pimdal/support/: transfer_helper.h
reference/.devcontainer/: Dockerfile  devcontainer.json
reference/db_operators/: CMakeLists.txt  aggregate.cpp  build.sh  build_profile.sh  hash_join.cpp  profile.sh  select.cpp  shared.cpp  sort.cpp  sort_merge_join.cpp
reference/pyarrow/: generate.py
reference/pyarrow/cpu/micro/: aggregation.py  join.py  order.py  selection.py
reference/pyarrow/cpu/tpc/: query1.py  query3.py  query4.py  query5.py  query6.py
reference/pyarrow/gpu/micro/: aggregation.py  join.py  order.py  selection.py
reference/pyarrow/gpu/tpc/: query1.py  query3.py  query4.py  query5.py  query6.py
